# webhasher

./: .gitignore  Cargo.toml  about.toml  index.html
.github/workflows/: deploy.yml
src/: lib.rs
web/: index.css  index.html  index.mjs
