[package]
name = "webhasher"
version = "0.1.0"
authors = ["mkaraki"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "console_error_panic_hook",
]
md4 = []

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
tsify-next = "0.5.4"
serde = "1.0.217"

hash_utils = { version = "0.1.0", features = ["hash_md2", "hash_md4", "hash_md5", "hash_crc", "hash_crc_essential", "hash_unix_cksum", "hash_fnv_64_minus", "hash_adler32", "hash_bsd_checksum", "hash_sysv_checksum", "hash_fletcher", "hash_lrc", "hash_djb2", "hash_sdbm", "hash_lose_lose", "hash_metrohash", "hash_cityhash", "hash_farmhash", "hash_ascon_hash", "hash_belt_hash", "hash_blake2", "hash_fsb", "hash_gost94", "hash_groestl", "hash_jh", "hash_ripemd", "hash_sha1", "hash_sha2", "hash_sha3", "hash_keccak", "hash_shabal", "hash_skein", "hash_sm3", "hash_streebog", "hash_whirlpool"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
